--- a/jserve.html
+++ b/jserve.html
@@ -1282,6 +1282,10 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/microsoft-office/en_office_14.0.7268.5000.fullsuite_x64.exe" icon="microsoft-office-2010" name="en_office_14.0.7268.5000_fullsuite_x64.exe"></link>
         </folder>
       </folder>
+      <folder name="Prism Launcher" icon="prism-launcher">
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/prism-launcher/PrismLauncher_9.4_QT5_NoDRM-Portable.zip" icon="zip" name="PrismLauncher_9.4_QT5_NoDRM-Portable.zip"></link>
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/prism-launcher/PrismLauncher_9.4_QT5_NoDRM-Setup.exe" icon="prism-launcher" name="PrismLauncher_9.4_QT5_NoDRM-Setup.exe"></link>
+      </folder>
     </folder>
   </folder>
   <folder name="Libraries" icon="libraries" open>
