--- a/jserve.html
+++ b/jserve.html
@@ -1270,7 +1270,7 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/AdobeGenP.exe" icon="genp" name="AdobeGenP.exe"></link>
           <rtf docid="adobe-cs6-readme" name="readme.txt" icon="txt"></rtf>
         </folder>
-        <folder name="Creative Cloud 2018" icon="adobe-cs6">
+        <folder name="Creative Cloud 2018" icon="adobe-cc">
         </folder>
       </folder>
       <folder name="Hex-Rays" icon="hexrays">
