--- a/jserve.html
+++ b/jserve.html
@@ -1286,6 +1286,9 @@ document.addEventListener("DOMContentLoaded", function(){
         <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/prism-launcher/PrismLauncher_9.4_QT5_NoDRM-Portable.zip" icon="zip" name="PrismLauncher_9.4_QT5_NoDRM-Portable.zip"></link>
         <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/prism-launcher/PrismLauncher_9.4_QT5_NoDRM-Setup.exe" icon="prism-launcher" name="PrismLauncher_9.4_QT5_NoDRM-Setup.exe"></link>
       </folder>
+      <folder name="Internet Download Manager" icon="internet-download-manager">
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/idm/idman642build48a.exe" icon="idm-setup" name="idman642build48a.exe"></link>
+      </folder>
     </folder>
   </folder>
   <folder name="Libraries" icon="libraries" open>
