--- a/jserve.html
+++ b/jserve.html
@@ -1287,7 +1287,9 @@ document.addEventListener("DOMContentLoaded", function(){
         <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/prism-launcher/PrismLauncher_9.4_QT5_NoDRM-Setup.exe" icon="prism-launcher" name="PrismLauncher_9.4_QT5_NoDRM-Setup.exe"></link>
       </folder>
       <folder name="Internet Download Manager" icon="internet-download-manager">
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/idm/idman642build48o.exe" icon="idm-setup" name="idman642build48o.exe"></link>
         <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/idm/idman642build48a.exe" icon="idm-setup" name="idman642build48a.exe"></link>
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/idm/idman641build2o.exe" icon="idm-setup" name="idman641build2o.exe"></link>
       </folder>
     </folder>
   </folder>
