--- a/jserve.html
+++ b/jserve.html
@@ -1292,6 +1292,9 @@ document.addEventListener("DOMContentLoaded", function(){
         <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/idm/idman642build48a.exe" icon="idm-setup" name="idman642build48a.exe"></link>
         <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/idm/idman641build2o.exe" icon="idm-setup" name="idman641build2o.exe"></link>
       </folder>
+      <folder name="WinRAR" icon="winrar">
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/winrar/winrar-x64-713.exe" icon="winrar" name="winrar-x64-713.exe"></link>
+      </folder>
     </folder>
   </folder>
   <folder name="Libraries" icon="libraries" open>
