--- a/jserve.html
+++ b/jserve.html
@@ -1283,7 +1283,7 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="http://prdl-download.adobe.com/InCopy/E52D7F0723924EDDBFF1DDBDC92B4723/1509104067946/InCopy_13_LS20_Win64.zip" icon="zip" name="Incopy_13_LS20_Win64.zip"></link>
           <link href="http://prdl-download.adobe.com/Dreamweaver/E696950CBA404E83BDC99E143E52BCF1/1560505699882/Dreamweaver%20CC%202018%20Set-up.zip" icon="zip" name="Dreamweaver CC 2018 (32-bit) Set-up.zip"></link>
           <link href="http://prdl-download.adobe.com/Dreamweaver/E696950CBA404E83BDC99E143E52BCF1/1560762266735/Dreamweaver%20CC%202018%20Set-up.zip" icon="zip" name="Dreamweaver CC 2018 Set-up.zip"></link>
-          <link href="http://prdl-download.adobe.com/Muse/D4EA4C416C974D22BC2ED1225914C9B0/1509300528126/Muse_2018_0_CC_LS24.exe" name="Muse_2018_0_CC_LS24.exe"></link>
+          <link href="http://prdl-download.adobe.com/Muse/D4EA4C416C974D22BC2ED1225914C9B0/1509300528126/Muse_2018_0_CC_LS24.exe" icon="adobe_muse_setup" name="Muse_2018_0_CC_LS24.exe"></link>
           <link href="http://prdl-download.adobe.com/Flash/720F758D27E945AE9971D2EEEFE179C1/1509111238142/Animate_18_LS20.exe" name="Animate_18_LS20.exe"></link>
           <link href="http://prdl-download.adobe.com/Dimension/BA884A82C5AB47569685C2BD7D1289AD/1508226581127/Dimension_1.0-20170927.r.672-f179c9c-ESD.zip" icon="zip" name="Dimension_1.0-20170927.r.672-f179c9c-ESD.zip"></link>
           <link href="http://prdl-download.adobe.com/Character%20Animator/1F0CF050A88A497B99B274182D1343A7/1509103076200/AdobeCharacterAnimatorAllTrial.zip" icon="zip" name="AdobeCharacterAnimatorAllTrial.zip"></link>
@@ -1296,7 +1296,7 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="http://prdl-download.adobe.com/Bridge/FA96960347614BFC971E28B536D3387F/1507866657130/Bridge.8.0.HDInstaller.zip" icon="zip" name="Bridge.8.0_x64.HDInstaller.zip"></link>
           <link href="http://prdl-download.adobe.com/SpeedGrade/1CC0FA5AC5BB48478EB666B24D9A609F/1509443936439/SpeedGrade_9_LS20.exe" name="SpeedGrade_9_LS20.exe"></link>
           <link href="http://prdl-download.adobe.com/AdobeProducts/EDGE/6/win64/Edge_Animate_6_0_0_LS17.exe" name="Edge_Animate_6_0_0_LS17.exe"></link>
-          <link href="http://prdl-download.adobe.com/Fuse/52AD40CCDACB4CC58AE88A281E0F3FDC/1507859734218/Fuse%20Installer.7z" icon="7z" name="Fuse%20Installer.7z"></link>
+          <link href="http://prdl-download.adobe.com/Fuse/52AD40CCDACB4CC58AE88A281E0F3FDC/1507859734218/Fuse%20Installer.7z" icon="7z" name="Fuse Installer.7z"></link>
           <link href="http://prdl-download.adobe.com/Adobe%20Scout/00B594044C0F409D82F41E1E719AF93B/1510396350714/Scout_1_1_3_LREFJC.msi" icon="msi" name="Scout_1_1_3_LREFJC.msi"></link>
           <link href="http://prdl-download.adobe.com/AdobeProducts/APRO/18/win32/Acrobat_DC_Web_WWMUI.exe" name="Acrobat_DC_Web_WWMUI.exe"></link>
           <link href="http://prdl-download.adobe.com/Flash%20Builder/C06A256DD8FD4DF186D90CE0ADCF0B2C/1509476504960/FlashBuilder_4_7_LS10.exe" name="FlashBuilder_4_7_LS10.exe"></link>
