--- a/jserve.html
+++ b/jserve.html
@@ -1270,6 +1270,12 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/AdobeGenP.exe" icon="genp" name="AdobeGenP.exe"></link>
           <rtf docid="adobe-cs6-readme" name="readme.txt" icon="txt"></rtf>
         </folder>
+        <folder name="Creative Cloud 2013" icon="adobe-cc-2013">
+        </folder>
+        <folder name="Creative Cloud 2014" icon="adobe-cc-2014">
+        </folder>
+        <folder name="Creative Cloud 2015" icon="adobe-cc-2015">
+        </folder>
         <folder name="Creative Cloud 2018" icon="adobe-cc">
           <link href="http://prdl-download.adobe.com/Photoshop/66A1D1E00DE44601B041A631261EC584/1507845150875/AdobePhotoshop19-mul.zip" icon="zip" name="AdobePhotoshop19-mul.zip"></link>
           <link href="http://prdl-download.adobe.com/Photoshop/66A1D1E00DE44601B041A631261EC584/1507846032938/AdobePhotoshop19-mul_x64.zip" icon="zip" name="AdobePhotoshop19-mul_x64.zip"></link>
