--- a/jserve.html
+++ b/jserve.html
@@ -1289,8 +1289,8 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="http://prdl-download.adobe.com/InCopy/E52D7F0723924EDDBFF1DDBDC92B4723/1509104067946/InCopy_13_LS20_Win64.zip" icon="zip" name="Incopy_13_LS20_Win64.zip"></link>
           <link href="http://prdl-download.adobe.com/Dreamweaver/E696950CBA404E83BDC99E143E52BCF1/1560505699882/Dreamweaver%20CC%202018%20Set-up.zip" icon="zip" name="Dreamweaver CC 2018 (32-bit) Set-up.zip"></link>
           <link href="http://prdl-download.adobe.com/Dreamweaver/E696950CBA404E83BDC99E143E52BCF1/1560762266735/Dreamweaver%20CC%202018%20Set-up.zip" icon="zip" name="Dreamweaver CC 2018 Set-up.zip"></link>
-          <link href="http://prdl-download.adobe.com/Muse/D4EA4C416C974D22BC2ED1225914C9B0/1509300528126/Muse_2018_0_CC_LS24.exe" icon="adobe_muse_setup" name="Muse_2018_0_CC_LS24.exe"></link>
-          <link href="http://prdl-download.adobe.com/Flash/720F758D27E945AE9971D2EEEFE179C1/1509111238142/Animate_18_LS20.exe" name="Animate_18_LS20.exe"></link>
+          <link href="http://prdl-download.adobe.com/Muse/D4EA4C416C974D22BC2ED1225914C9B0/1509300528126/Muse_2018_0_CC_LS24.exe" icon="adobe-muse-setup" name="Muse_2018_0_CC_LS24.exe"></link>
+          <link href="http://prdl-download.adobe.com/Flash/720F758D27E945AE9971D2EEEFE179C1/1509111238142/Animate_18_LS20.exe" icon="adobe-animate-setup" name="Animate_18_LS20.exe"></link>
           <link href="http://prdl-download.adobe.com/Dimension/BA884A82C5AB47569685C2BD7D1289AD/1508226581127/Dimension_1.0-20170927.r.672-f179c9c-ESD.zip" icon="zip" name="Dimension_1.0-20170927.r.672-f179c9c-ESD.zip"></link>
           <link href="http://prdl-download.adobe.com/Character%20Animator/1F0CF050A88A497B99B274182D1343A7/1509103076200/AdobeCharacterAnimatorAllTrial.zip" icon="zip" name="AdobeCharacterAnimatorAllTrial.zip"></link>
           <link href="http://prdl-download.adobe.com/Premiere%20Pro/50AAFADD563D4691896967A6AB1D47F8/1507826592638/AdobePremierePro12AllTrial.zip" icon="zip" name="AdobePremierePro12AllTrial.zip"></link>
