more more icons

--- a/jserve.html
+++ b/jserve.html
@@ -1307,8 +1307,8 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="http://prdl-download.adobe.com/AdobeProducts/APRO/18/win32/Acrobat_DC_Web_WWMUI.exe" name="Acrobat_DC_Web_WWMUI.exe"></link>
           <link href="http://prdl-download.adobe.com/Flash%20Builder/C06A256DD8FD4DF186D90CE0ADCF0B2C/1509476504960/FlashBuilder_4_7_LS10.exe" name="FlashBuilder_4_7_LS10.exe"></link>
           <link href="http://prdl-download.adobe.com/Flash%20Builder/C06A256DD8FD4DF186D90CE0ADCF0B2C/1509477139530/FlashBuilder_4_7_LS10_win64.exe" name="FlashBuilder_4_7_LS10_win64.exe"></link>
-          <link href="http://prdl-download.adobe.com/AdobeProducts/FWKS/12/win32/Fireworks_12_LS16.exe" name="Fireworks_12_LS16.exe"></link>
-          <link href="http://prdl-download.adobe.com/ExtendScriptToolkit/85C17E5FC8B34A7B8483796F0367F97C/1509443329438/AdobeExtendScriptToolkit_4_LS22.exe" name="AdobeExtendScriptToolkit_4_LS22.exe"></link>
+          <link href="http://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/FWKS/12/win32/Fireworks_12_LS4.exe" icon="adobe_extractor_cs4" name="Fireworks_12_LS4.exe"></link>
+          <link href="http://prdl-download.adobe.com/ExtendScriptToolkit/85C17E5FC8B34A7B8483796F0367F97C/1509443329438/AdobeExtendScriptToolkit_4_LS22.exe" icon="adobe-extendscript-setup" name="AdobeExtendScriptToolkit_4_LS22.exe"></link>
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/AdobeGenP.exe" icon="genp" name="AdobeGenP.exe"></link>
         </folder>
       </folder>
