--- a/jserve.html
+++ b/jserve.html
@@ -1301,7 +1301,7 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="http://prdl-download.adobe.com/Bridge/FA96960347614BFC971E28B536D3387F/1507864106048/Bridge.8.0.HDInstaller.zip" icon="zip" name="Bridge.8.0_x86.HDInstaller.zip"></link>
           <link href="http://prdl-download.adobe.com/Bridge/FA96960347614BFC971E28B536D3387F/1507866657130/Bridge.8.0.HDInstaller.zip" icon="zip" name="Bridge.8.0_x64.HDInstaller.zip"></link>
           <link href="http://prdl-download.adobe.com/SpeedGrade/1CC0FA5AC5BB48478EB666B24D9A609F/1509443936439/SpeedGrade_9_LS20.exe" icon="adobe_extractor_cs4" name="SpeedGrade_9_LS20.exe"></link>
-          <link href="http://prdl-download.adobe.com/AdobeProducts/EDGE/6/win64/Edge_Animate_6_0_0_LS17.exe" name="Edge_Animate_6_0_0_LS17.exe"></link>
+          <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-cloud-2018/Edge_Animate_6_0_0_LS17.exe" icon="adobe-edgeanimate-setup" name="Edge_Animate_6_0_0_LS17.exe"></link>
           <link href="http://prdl-download.adobe.com/Fuse/52AD40CCDACB4CC58AE88A281E0F3FDC/1507859734218/Fuse%20Installer.7z" icon="7z" name="Fuse Installer.7z"></link>
           <link href="http://prdl-download.adobe.com/Adobe%20Scout/00B594044C0F409D82F41E1E719AF93B/1510396350714/Scout_1_1_3_LREFJC.msi" icon="msi" name="Scout_1_1_3_LREFJC.msi"></link>
           <link href="http://prdl-download.adobe.com/AdobeProducts/APRO/18/win32/Acrobat_DC_Web_WWMUI.exe" name="Acrobat_DC_Web_WWMUI.exe"></link>
