--- a/jserve.html
+++ b/jserve.html
@@ -1304,8 +1304,8 @@ document.addEventListener("DOMContentLoaded", function(){
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-cloud-2018/Edge_Animate_6_0_0_LS17.exe" icon="adobe-edgeanimate-setup" name="Edge_Animate_6_0_0_LS17.exe"></link>
           <link href="http://prdl-download.adobe.com/Fuse/52AD40CCDACB4CC58AE88A281E0F3FDC/1507859734218/Fuse%20Installer.7z" icon="7z" name="Fuse Installer.7z"></link>
           <link href="http://prdl-download.adobe.com/Adobe%20Scout/00B594044C0F409D82F41E1E719AF93B/1510396350714/Scout_1_1_3_LREFJC.msi" icon="msi" name="Scout_1_1_3_LREFJC.msi"></link>
-          <link href="http://prdl-download.adobe.com/Flash%20Builder/C06A256DD8FD4DF186D90CE0ADCF0B2C/1509476504960/FlashBuilder_4_7_LS10.exe" name="FlashBuilder_4_7_LS10.exe"></link>
-          <link href="http://prdl-download.adobe.com/Flash%20Builder/C06A256DD8FD4DF186D90CE0ADCF0B2C/1509477139530/FlashBuilder_4_7_LS10_win64.exe" name="FlashBuilder_4_7_LS10_win64.exe"></link>
+          <link href="http://prdl-download.adobe.com/Flash%20Builder/C06A256DD8FD4DF186D90CE0ADCF0B2C/1509476504960/FlashBuilder_4_7_LS10.exe" icon="adobe_extractor_cs4" name="FlashBuilder_4_7_LS10.exe"></link>
+          <link href="http://prdl-download.adobe.com/Flash%20Builder/C06A256DD8FD4DF186D90CE0ADCF0B2C/1509477139530/FlashBuilder_4_7_LS10_win64.exe" icon="adobe_extractor_cs4" name="FlashBuilder_4_7_LS10_win64.exe"></link>
           <link href="http://trials.adobe.com/AdobeProducts/legacy/99CABBAC-C975-4A06-8D99-064C6871EE80/FWKS/12/win32/Fireworks_12_LS4.exe" icon="adobe_extractor_cs4" name="Fireworks_12_LS4.exe"></link>
           <link href="http://prdl-download.adobe.com/ExtendScriptToolkit/85C17E5FC8B34A7B8483796F0367F97C/1509443329438/AdobeExtendScriptToolkit_4_LS22.exe" icon="adobe-extendscript-setup" name="AdobeExtendScriptToolkit_4_LS22.exe"></link>
           <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/adobe-creative-suite/AdobeGenP.exe" icon="genp" name="AdobeGenP.exe"></link>
