--- a/jserve.html
+++ b/jserve.html
@@ -1336,6 +1336,27 @@ document.addEventListener("DOMContentLoaded", function(){
       <folder name="WinRAR" icon="winrar">
         <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/winrar/winrar-x64-713.exe" icon="winrar" name="winrar-x64-713.exe"></link>
       </folder>
+      <folder name="Legacy Software Corporation" icon="lsc">
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/cuda_vista_patch.zip" icon="zip" name="cuda_vista_patch.zip"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/nvidia_driver_patcher_vista.zip" icon="zip" name="nvidia_driver_patcher_vista.zip"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/python_vista7_bcryptprimitives.zip" icon="zip" name="python_vista7_bcryptprimitives.zip"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/SecondSystem10_Vista64.zip" icon="zip" name="SecondSystem10_Vista64.zip"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/SecondSystem20_Vista.zip" icon="zip" name="SecondSystem20_Vista.zip"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/SecondSystem20_Vista_exp.zip" icon="zip" name="SecondSystem20_Vista_exp.zip"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/SecondSystem20_Win7.zip" icon="zip" name="SecondSystem20_Win7.zip"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/SecondSystem20_Win7_exp.zip" icon="zip" name="SecondSystem20_Win7_exp.zip"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/SecondSystem21_Vista.zip" icon="zip" name="SecondSystem21_Vista.zip"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/SecondSystem21_Win7.zip" icon="zip" name="SecondSystem21_Win7.zip"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/SecondSystem21_Win81.zip" icon="zip" name="SecondSystem21_Win81.zip"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/supermium_121_32_portable_xp.exe" icon="zip" name="supermium_121_32_portable_xp.exe"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/supermium_121_64_portable_xp.exe" icon="zip" name="supermium_121_64_portable_xp.exe"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/supermium_premium_package_2024.zip" icon="zip" name="supermium_premium_package_2024.zip"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/supermium_premium_package_2025.zip" icon="zip" name="supermium_premium_package_2025.zip"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/supermium_uao.zip" icon="zip" name="supermium_uao.zip"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/vista_advapi32_patch.zip" icon="zip" name="vista_advapi32_patch.zip"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/widevine_progwrp_patcher.zip" icon="zip" name="widevine_progwrp_patcher.zip"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/winload_ci_patcher.zip" icon="zip" name="winload_ci_patcher.zip"></link> 
+      </folder>
     </folder>
   </folder>
   <folder name="Libraries" icon="libraries" open>
