--- a/jserve.html
+++ b/jserve.html
@@ -1348,8 +1348,8 @@ document.addEventListener("DOMContentLoaded", function(){
         <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/SecondSystem21_Vista.zip" icon="zip" name="SecondSystem21_Vista.zip"></link> 
         <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/SecondSystem21_Win7.zip" icon="zip" name="SecondSystem21_Win7.zip"></link> 
         <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/SecondSystem21_Win81.zip" icon="zip" name="SecondSystem21_Win81.zip"></link> 
-        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/supermium_121_32_portable_xp.exe" icon="zip" name="supermium_121_32_portable_xp.exe"></link> 
-        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/supermium_121_64_portable_xp.exe" icon="zip" name="supermium_121_64_portable_xp.exe"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/supermium_121_32_portable_xp.exe" icon="7zsfx" name="supermium_121_32_portable_xp.exe"></link> 
+        <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/supermium_121_64_portable_xp.exe" icon="7zsfx" name="supermium_121_64_portable_xp.exe"></link> 
         <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/supermium_premium_package_2024.zip" icon="zip" name="supermium_premium_package_2024.zip"></link> 
         <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/supermium_premium_package_2025.zip" icon="zip" name="supermium_premium_package_2025.zip"></link> 
         <link href="https://github.com/CrackThemAll/CrackThemAll.github.io/releases/download/legacy-software-corporation/supermium_uao.zip" icon="zip" name="supermium_uao.zip"></link> 
